--- a/settings/IFS_CY46R1.toml
+++ b/settings/IFS_CY46R1.toml
@@ -1,19 +1,20 @@
 
 ##############################################################################################################################
-# Settings file for to create ifs netcdf for IFS CY48R1                                                                      #
+# Settings file for to create ifs-netcdf for IFS CY46R1                                                                      #
 #                                                                                                                            #
 #                                                                                                                            #
 # INFO:  The file has an the following sections:                                                                             #
-#    1. default           => here few defaults values can be set up, but they could be overrided by later if needed.      #
-#    2. species           => core of the settings, each species has a config file, and engine and a ncname for the output #
-#                            if engine or ncname is set up as default the default section will be used.                   #
-#    3. Processing        => here is where we indicate the process for an specific calculation. It has to parts:          #
-#       3.1 process       => here we indicate which single aerosols should be processed and which mixed aerosols.         #
-#                            for this we will just use the names of the fields in [species]                               #
-#       3.2 info          => here we can add information to the final netcdfs as global attribute (metadata).             #
+#       1. default           => here few defaults values can be set up                                                       #
+#       2. species           => core of the settings: each species has a config file, and engine and a ncname for the output #
+#                               if engine or ncname is set up as default the default section will be used.                   #
+#       3. Processing        => here is where we indicate the process for an specific calculation. It has to parts:          #
+#          3.1 process       => here we indicate which single aerosols should be processed and which mixed aerosols.         #
+#                               for this we will just use the names of the fields in [species]                               #
+#          3.2 ifs           => section describing the information to build propertly the ifs-netcdf file                    #
+#          3.2 info          => here we can add information to the final netcdfs as global attribute (metadata).             #
 #                                                                                                                            #
 # Version:                                                                                                                   #
-#    1.0.0    08-Oct-2022                                                                                                    #
+#    1.0.0    15-Nov-2022                                                                                                    #
 #                                                                                                                            #
 # Contact: Ramiro Checa-Garcia                                                                                               #
 #          ramiro.checa-garcia@ecmwf.int                                                                                     #
@@ -53,22 +54,22 @@ testdir     = "tests"
 [species]
 
 # These aerosols are not mixed
-du1          = { config = "data/config_toml/config_du1.toml"           ,engine="default", ncname='default', nangle='default'}
-du2          = { config = "data/config_toml/config_du2.toml"           ,engine="default", ncname='default', nangle='default'}
-du3          = { config = "data/config_toml/config_du3.toml"           ,engine="default", ncname='default', nangle='default'}
+du1          = { config = "data/config_toml_CY46R1/config_du1.toml"           ,engine="default", ncname='default', nangle='default'}
+du2          = { config = "data/config_toml_CY46R1/config_du2.toml"           ,engine="default", ncname='default', nangle='default'}
+du3          = { config = "data/config_toml_CY46R1/config_du3.toml"           ,engine="default", ncname='default', nangle='default'}
 
-bc1          = { config = "data/config_toml/config_bc1.toml"           ,engine="default", ncname='default', nangle='default'}
-bc2          = { config = "data/config_toml/config_bc2.toml"           ,engine="default", ncname='default', nangle='default'}
-bc3          = { config = "data/config_toml/config_bc3.toml"           ,engine="default", ncname='default', nangle='default'}
+bc1          = { config = "data/config_toml_CY46R1/config_bc1.toml"           ,engine="default", ncname='default', nangle='default'}
+bc2          = { config = "data/config_toml_CY46R1/config_bc2.toml"           ,engine="default", ncname='default', nangle='default'}
+bc3          = { config = "data/config_toml_CY46R1/config_bc3.toml"           ,engine="default", ncname='default', nangle='default'}
 
-su           = { config = "data/config_toml/config_su.toml"            ,engine="default", ncname='default', nangle='default'}
-ss           = { config = "data/config_toml/config_ss.toml"            ,engine="default", ncname='default', nangle='default'}
+su           = { config = "data/config_toml_CY46R1/config_su.toml"            ,engine="default", ncname='default', nangle='default'}
+ss           = { config = "data/config_toml_CY46R1/config_ss.toml"            ,engine="default", ncname='default', nangle='default'}
 
-ni_fine      = { config = "data/config_toml/config_ni_fine.toml"       ,engine="default", ncname='default', nangle='default'}
-ni_coarse    = { config = "data/config_toml/config_ni_coarse.toml"     ,engine="default", ncname='default', nangle='default'}
-NH3_fine     = { config = "data/config_toml/config_ammonia_fine.toml"  ,engine="default", ncname='default', nangle='default'}
-SOA1         = { config = "data/config_toml/config_SOA1.toml"          ,engine="default", ncname='default', nangle='default'}
-SOA2         = { config = "data/config_toml/config_SOA2.toml"          ,engine="default", ncname='default', nangle='default'}
+ni_fine      = { config = "data/config_toml_CY46R1/config_ni_fine.toml"       ,engine="default", ncname='default', nangle='default'}
+ni_coarse    = { config = "data/config_toml_CY46R1/config_ni_coarse.toml"     ,engine="default", ncname='default', nangle='default'}
+NH3_fine     = { config = "data/config_toml_CY46R1/config_ammonia_fine.toml"  ,engine="default", ncname='default', nangle='default'}
+SOA1         = { config = "data/config_toml_CY46R1/config_SOA1.toml"          ,engine="default", ncname='default', nangle='default'}
+SOA2         = { config = "data/config_toml_CY46R1/config_SOA2.toml"          ,engine="default", ncname='default', nangle='default'}
 
 
 # Organic is a mixing of aerosols
@@ -77,9 +78,9 @@ SOA2         = { config = "data/config_toml/config_SOA2.toml"          ,engine="
 #       for mixed species XXX.yyy. The mixed aerosol is XXX and the components are yyy. However by refering
 #       as XXX.yyy still it is possible to perform a calculation as an individual single specie.
 
-organic.waso = { config = "data/config_toml/config_organic_waso.toml"  ,engine="default", ncname='default' , nangle='default'}
-organic.inso = { config = "data/config_toml/config_organic_inso.toml"  ,engine="default", ncname='default' , nangle='default'}
-organic.soot = { config = "data/config_toml/config_organic_soot.toml"  ,engine="default", ncname='default' , nangle='default'}
+organic.waso = { config = "data/config_toml_CY46R1/config_organic_waso.toml"  ,engine="default", ncname='default' , nangle='default'}
+organic.inso = { config = "data/config_toml_CY46R1/config_organic_inso.toml"  ,engine="default", ncname='default' , nangle='default'}
+organic.soot = { config = "data/config_toml_CY46R1/config_organic_soot.toml"  ,engine="default", ncname='default' , nangle='default'}
 
 
 # ============================================================================================================================
@@ -91,7 +92,7 @@ organic.soot = { config = "data/config_toml/config_organic_soot.toml"  ,engine="
 
 skip=false
 
-# For processing single file you can add then here
+# For processing single aerosols you can add them here (we are adding the names in species section)
 single = [ "ss", "du1", "du2", "du3", "bc1", "bc2", "bc3",
            "su", "ni_fine", "ni_coarse", "NH3_fine", 
            "SOA1", "SOA2"]                                   # This will process these single species
@@ -106,14 +107,14 @@ mixing.organic.conf   = "organic"                             # This will proces
 mixing.organic.ncname = ["organic", "optics_IFS", "C:today"]  # here we have to specific the final name MANDATORY
 
 [ifs]
-# Now we give some rules to build a single IFS netcdf. This example is a test based in 3 different aerosols where one is used
-# for soluble and insoluble. We define here a table with the information needed. The aer.XX, XX is the tag of the aerosol.
+# Now we give some rules to build a single IFS netcdf. 
+# We define here a table with the information needed. The aer.XX, XX is the tag of the aerosol.
 
 # Note that IFS code expect to find each type of aerosol in an specific position in array.
 # so we have to impose a number of phobic and philic species and indicate then with position
 # where to place them. All other should be filled with missing or nan.
 
-netcdfname = "ifs_cy48r1.nc"
+netcdfname = "ifs_CY46R1.nc"
 
 number     = { philic=10, phobic=14}
 
@@ -139,7 +140,7 @@ aer.nic    = { species="ni_coarse" , type="philic", position= 10, bin=1 }
 
 
 [info]
-product_version = '48R1'
+product_version = '46R1'
 comment_string = """
 This file provides aerosol scattering properties versus wavenumber for the aerosol \
 species defined by Bozzo et al. (GMD 2020), for use in the ECMWF Integrated Forecasting \
@@ -182,4 +183,4 @@ description_hydrophilic = """
 
 contact      = 'ramiro.checa-garcia@ecmwf.int'
 institution  = 'ECMWF'
-experiment   = 'testing new software: ifs_aer_opt.jl'
+experiment   = 'using the sofware tool: ecaeropt'
