Added scripts to calculate in sbatch mode in ATOS, bugs in config and setting files fixed

--- a/data/config_toml_CY48R1/config_bc1.toml
+++ b/data/config_toml_CY48R1/config_bc1.toml
@@ -31,5 +31,6 @@ ext_scaling = 1.0
 
 [tags]
 aer_type    = "black_carbon_Hess"
-ifs         = "CY46R1"
+opt_info    = "OPAC"
+ifs         = [ "CY46R1", "CY48R1" ]
 revised     = 2022-11-15
