--- a/settings/short_ifs_example.toml
+++ b/settings/short_ifs_example.toml
@@ -1,19 +1,20 @@
 
 ##############################################################################################################################
-# Settings file for to create ifs netcdf for IFS CY48R1                                                                      #
+# Settings file for to create quickly evaluate the ifs creation step                                                         #
 #                                                                                                                            #
 #                                                                                                                            #
 # INFO:  The file has an the following sections:                                                                             #
-#    1. default           => here few defaults values can be set up, but they could be overrided by later if needed.      #
-#    2. species           => core of the settings, each species has a config file, and engine and a ncname for the output #
-#                            if engine or ncname is set up as default the default section will be used.                   #
-#    3. Processing        => here is where we indicate the process for an specific calculation. It has to parts:          #
-#       3.1 process       => here we indicate which single aerosols should be processed and which mixed aerosols.         #
-#                            for this we will just use the names of the fields in [species]                               #
-#       3.2 info          => here we can add information to the final netcdfs as global attribute (metadata).             #
+#       1. default           => here few defaults values can be set up                                                       #
+#       2. species           => core of the settings: each species has a config file, and engine and a ncname for the output #
+#                               if engine or ncname is set up as default the default section will be used.                   #
+#       3. Processing        => here is where we indicate the process for an specific calculation. It has to parts:          #
+#          3.1 process       => here we indicate which single aerosols should be processed and which mixed aerosols.         #
+#                               for this we will just use the names of the fields in [species]                               #
+#          3.2 ifs           => section describing the information to build propertly the ifs-netcdf file                    #
+#          3.2 info          => here we can add information to the final netcdfs as global attribute (metadata).             #
 #                                                                                                                            #
 # Version:                                                                                                                   #
-#    1.0.0    08-Oct-2022                                                                                                    #
+#    1.0.0    15-Nov-2022                                                                                                    #
 #                                                                                                                            #
 # Contact: Ramiro Checa-Garcia                                                                                               #
 #          ramiro.checa-garcia@ecmwf.int                                                                                     #
@@ -152,33 +153,31 @@ Cycle """
 # There are species used for philic and phobic, so we need to write in configuration file.
 # description.philic = 
 # description.phobic = (even the phobic RH used)
-description_hydrophobic.1 = """
- 1: Desert dust, bin 1, 0.03-0.55 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987; \
- 2: Desert dust, bin 2, 0.55-0.90 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987; \
- 3: Desert dust, bin 3, 0.90-20.0 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987; \
- 4: Desert dust, bin 1, 0.03-0.55 micron, Fouquart et al 1987 ; \
- 5: Desert dust, bin 2, 0.55-0.90 micron, Fouquart et al 1987 ; \
- 6: Desert dust, bin 3, 0.90-20.0 micron, Fouquart et al 1987 ; \
- 7: Desert dust, bin 1, 0.03-0.55 micron, Woodward 2001, Table 2 ; \
- 8: Desert dust, bin 2, 0.55-0.90 micron, Woodward 2001, Table 2 ; \
- 9: Desert dust, bin 3, 0.90-20.0 micron, Woodward 2001, Table 2 ; \
- 10: Hydrophobic organic matter, OPAC (hydrophilic at RH=20%%) ; \
- 11: Black carbon, OPAC ; \
- 12: Black carbon, Bond and Bergstrom 2006 ; \
- 13: Black carbon, Stier et al 2007 ; \
- 14: Stratospheric sulfate (hydrophilic ammonium sulfate at RH 20%%-30%%)"""
+description_hydrophobic.1  = " 1: Desert dust, bin 1, 0.03-0.55 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
+description_hydrophobic.2  = " 2: Desert dust, bin 2, 0.55-0.90 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
+description_hydrophobic.3  = " 3: Desert dust, bin 3, 0.90-20.0 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
+description_hydrophobic.4  = " 4: Desert dust, bin 1, 0.03-0.55 micron, Fouquart et al 1987  "
+description_hydrophobic.5  = " 5: Desert dust, bin 2, 0.55-0.90 micron, Fouquart et al 1987  "
+description_hydrophobic.6  = " 6: Desert dust, bin 3, 0.90-20.0 micron, Fouquart et al 1987  "
+description_hydrophobic.7  = " 7: Desert dust, bin 1, 0.03-0.55 micron, Woodward 2001, Table 2  "
+description_hydrophobic.8  = " 8: Desert dust, bin 2, 0.55-0.90 micron, Woodward 2001, Table 2  "
+description_hydrophobic.9  = " 9: Desert dust, bin 3, 0.90-20.0 micron, Woodward 2001, Table 2  " 
+description_hydrophobic.10 = " 10: Hydrophobic organic matter, OPAC (hydrophilic at RH=20%%)  "
+description_hydrophobic.11 = " 11: Black carbon, OPAC  "
+description_hydrophobic.12 = " 12: Black carbon, Bond and Bergstrom 2006  "
+description_hydrophobic.13 = " 13: Black carbon, Stier et al 2007  "
+description_hydrophobic.14 = " 14: Stratospheric sulfate (hydrophilic ammonium sulfate at RH 20%%-30%%)"
 
-description_hydrophilic = """
- 1: Sea salt, bin 1, 0.03-0.5 micron, OPAC ; \
- 2: Sea salt, bin 2, 0.50-5.0 micron, OPAC ; \
- 3: Sea salt, bin 3, 5.0-20.0 micron, OPAC ; \
- 4: Hydrophilic organic matter, OPAC ; \
- 5: Ammonium sulfate (for sulfate), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/ ; \
- 6: Secondary organic aerosol - biogenic, Moise et al 2015 ; \
- 7: Secondary organic aerosol - anthropogenic, Moise et al 2015 ; \
- 8: Fine mode Ammonium sulfate (for ammonia), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/ ; \
- 9: Fine mode Nitrate, GLOMAP ; \
- 10: Coarse mode Nitrate, GLOMAP"""
+description_hydrophilic.1  = " 1: Sea salt, bin 1, 0.03-0.5 micron, OPAC "
+description_hydrophilic.2  = " 2: Sea salt, bin 2, 0.50-5.0 micron, OPAC "
+description_hydrophilic.3  = " 3: Sea salt, bin 3, 5.0-20.0 micron, OPAC "
+description_hydrophilic.4  = " 4: Hydrophilic organic matter, OPAC "
+description_hydrophilic.5  = " 5: Ammonium sulfate (for sulfate), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
+description_hydrophilic.6  = " 6: Secondary organic aerosol - biogenic, Moise et al 2015  "
+description_hydrophilic.7 = " 7: Secondary organic aerosol - anthropogenic, Moise et al 2015  "
+description_hydrophilic.8 = " 8: Fine mode Ammonium sulfate (for ammonia), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
+description_hydrophilic.9 = " 9: Fine mode Nitrate, GLOMAP  "
+description_hydrophilic.10 = " 10: Coarse mode Nitrate, GLOMA "
 
 contact      = 'ramiro.checa-garcia@ecmwf.int'
 institution  = 'ECMWF'
