--- a/settings/short_ifs_example.toml
+++ b/settings/short_ifs_example.toml
@@ -114,7 +114,7 @@ mixing.organic.ncname = ["organic", "optics_IFS", "C:today"]  # here we have to 
 # so we have to impose a number of phobic and philic species and indicate then with position
 # where to place them. All other should be filled with missing or nan.
 
-netcdfname = "ifs_cy48r1.nc"
+netcdfname = "ifs_short_example.nc"
 
 number     = { philic=10, phobic=14}
 
@@ -153,30 +153,30 @@ Cycle """
 # There are species used for philic and phobic, so we need to write in configuration file.
 # description.philic = 
 # description.phobic = (even the phobic RH used)
-description_hydrophobic.1  = " 1: Desert dust, bin 1, 0.03-0.55 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
-description_hydrophobic.2  = " 2: Desert dust, bin 2, 0.55-0.90 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
-description_hydrophobic.3  = " 3: Desert dust, bin 3, 0.90-20.0 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987 "
-description_hydrophobic.4  = " 4: Desert dust, bin 1, 0.03-0.55 micron, Fouquart et al 1987  "
-description_hydrophobic.5  = " 5: Desert dust, bin 2, 0.55-0.90 micron, Fouquart et al 1987  "
-description_hydrophobic.6  = " 6: Desert dust, bin 3, 0.90-20.0 micron, Fouquart et al 1987  "
-description_hydrophobic.7  = " 7: Desert dust, bin 1, 0.03-0.55 micron, Woodward 2001, Table 2  "
-description_hydrophobic.8  = " 8: Desert dust, bin 2, 0.55-0.90 micron, Woodward 2001, Table 2  "
-description_hydrophobic.9  = " 9: Desert dust, bin 3, 0.90-20.0 micron, Woodward 2001, Table 2  " 
-description_hydrophobic.10 = " 10: Hydrophobic organic matter, OPAC (hydrophilic at RH=20%%)  "
-description_hydrophobic.11 = " 11: Black carbon, OPAC  "
-description_hydrophobic.12 = " 12: Black carbon, Bond and Bergstrom 2006  "
-description_hydrophobic.13 = " 13: Black carbon, Stier et al 2007  "
+description_hydrophobic.1  = " 1: Desert dust, bin 1, 0.03-0.55 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987; "
+description_hydrophobic.2  = " 2: Desert dust, bin 2, 0.55-0.90 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987; "
+description_hydrophobic.3  = " 3: Desert dust, bin 3, 0.90-20.0 micron, (SW) Dubovik et al. 2002 (LW) Fouquart et al. 1987; "
+description_hydrophobic.4  = " 4: Desert dust, bin 1, 0.03-0.55 micron, Fouquart et al 1987 ; "
+description_hydrophobic.5  = " 5: Desert dust, bin 2, 0.55-0.90 micron, Fouquart et al 1987 ; "
+description_hydrophobic.6  = " 6: Desert dust, bin 3, 0.90-20.0 micron, Fouquart et al 1987 ; "
+description_hydrophobic.7  = " 7: Desert dust, bin 1, 0.03-0.55 micron, Woodward 2001, Table 2 ; "
+description_hydrophobic.8  = " 8: Desert dust, bin 2, 0.55-0.90 micron, Woodward 2001, Table 2 ; "
+description_hydrophobic.9  = " 9: Desert dust, bin 3, 0.90-20.0 micron, Woodward 2001, Table 2 ; " 
+description_hydrophobic.10 = " 10: Hydrophobic organic matter, OPAC (hydrophilic at RH=20%%) ; "
+description_hydrophobic.11 = " 11: Black carbon, OPAC ; "
+description_hydrophobic.12 = " 12: Black carbon, Bond and Bergstrom 2006 ; "
+description_hydrophobic.13 = " 13: Black carbon, Stier et al 2007 ; "
 description_hydrophobic.14 = " 14: Stratospheric sulfate (hydrophilic ammonium sulfate at RH 20%%-30%%)"
 
-description_hydrophilic.1  = " 1: Sea salt, bin 1, 0.03-0.5 micron, OPAC "
-description_hydrophilic.2  = " 2: Sea salt, bin 2, 0.50-5.0 micron, OPAC "
-description_hydrophilic.3  = " 3: Sea salt, bin 3, 5.0-20.0 micron, OPAC "
-description_hydrophilic.4  = " 4: Hydrophilic organic matter, OPAC "
-description_hydrophilic.5  = " 5: Ammonium sulfate (for sulfate), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
-description_hydrophilic.6  = " 6: Secondary organic aerosol - biogenic, Moise et al 2015  "
-description_hydrophilic.7 = " 7: Secondary organic aerosol - anthropogenic, Moise et al 2015  "
-description_hydrophilic.8 = " 8: Fine mode Ammonium sulfate (for ammonia), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
-description_hydrophilic.9 = " 9: Fine mode Nitrate, GLOMAP  "
+description_hydrophilic.1  = " 1: Sea salt, bin 1, 0.03-0.5 micron, OPAC; "
+description_hydrophilic.2  = " 2: Sea salt, bin 2, 0.50-5.0 micron, OPAC; "
+description_hydrophilic.3  = " 3: Sea salt, bin 3, 5.0-20.0 micron, OPAC; "
+description_hydrophilic.4  = " 4: Hydrophilic organic matter, OPAC; "
+description_hydrophilic.5  = " 5: Ammonium sulfate (for sulfate), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/ ; "
+description_hydrophilic.6  = " 6: Secondary organic aerosol - biogenic, Moise et al 2015 ; "
+description_hydrophilic.7 = " 7: Secondary organic aerosol - anthropogenic, Moise et al 2015 ; "
+description_hydrophilic.8 = " 8: Fine mode Ammonium sulfate (for ammonia), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/ ; "
+description_hydrophilic.9 = " 9: Fine mode Nitrate, GLOMAP ; "
 description_hydrophilic.10 = " 10: Coarse mode Nitrate, GLOMA "
 
 contact      = 'ramiro.checa-garcia@ecmwf.int'
