Added optical model to config_toml_CY48R1, added new function to save ifs_CY49R1, added new setting file for CY49R1

--- a/data/config_toml_CY48R1/config_ammonia_fine.toml
+++ b/data/config_toml_CY48R1/config_ammonia_fine.toml
@@ -32,6 +32,7 @@ ext_scaling = 1.0
 
 
 [tags]
+opt_model   = "GACP"
 aer_type    = "ammonia_fine"
 ifs         = "CY46R1"
 revised     = 2022-11-15
