--- a/data/config_toml_CY48R1/config_bc1.toml
+++ b/data/config_toml_CY48R1/config_bc1.toml
@@ -30,6 +30,7 @@ wl_out_file = "data/wavelengths/wl_out_IFS.txt"
 ext_scaling = 1.0
 
 [tags]
+opt_model   = "Hess1988"
 aer_type    = "black_carbon_Hess"
 opt_info    = "OPAC"
 ifs         = [ "CY46R1", "CY48R1" ]
