--- a/data/config_toml_CY48R1/config_bc3.toml
+++ b/data/config_toml_CY48R1/config_bc3.toml
@@ -30,6 +30,7 @@ wl_out_file = "data/wavelengths/wl_out_IFS.txt"
 ext_scaling = 1.0
 
 [tags]
+opt_model= "Bond2006"
 aer_type = "black_carbon_BondBergstrom"
 ifs      = "CY46R1"
 revised  = 2022-11-15
