--- a/data/config_toml_CY48R1/config_du2.toml
+++ b/data/config_toml_CY48R1/config_du2.toml
@@ -31,6 +31,7 @@ aer_type    = "dust_Woodward"
 ext_scaling = 1.0
 
 [tags]
+opt_model="Woodward2001"
 aer_type = "dust_Woodward"
 ifs      = "CY46R1"
 revised  = 2022-11-15
