--- a/data/config_toml_CY48R1/config_du4.toml
+++ b/data/config_toml_CY48R1/config_du4.toml
@@ -31,6 +31,7 @@ wl_out_file = "data/wavelengths/wl_out_IFS.txt"
 ext_scaling = 1.0
 
 [tags]
+opt_model= "Balkanski2007DiBiagio2017"
 aer_type = "dust_CYR481_prog"
 ifs      = "CY48R1"
 revised  = 2022-11-15
