--- a/data/config_toml_CY48R1/config_ni_fine.toml
+++ b/data/config_toml_CY48R1/config_ni_fine.toml
@@ -31,6 +31,7 @@ wl_out_file = "data/wavelengths/wl_out_IFS.txt"
 ext_scaling = 1.0
 
 [tags]
+opt_model   = "GLOMAP"
 aer_type    = "ni_fine"
 ifs         = "CY46R1"
 revised     = 2022-11-15
