--- a/settings/IFS_CY49R1.toml
+++ b/settings/IFS_CY49R1.toml
@@ -27,7 +27,7 @@
 # specific information in the config files or in the process section
 
 [default]
-  wavelengths = "data/wavelengths/wl_out_IFS.txt"     # indicates the default wavelengths for output files this
+wavelengths = "data/wavelengths/wl_out_TEST_2.txt"   # indicates the default wavelengths for output files this
                                                     # will override the value in the configuration files!!
                                                     # if you want to keep conf. files value remove this.
 
@@ -124,9 +124,8 @@ mixing.organic.ncname = ["organic", "optics_IFS", "C:today"]  # here we have to 
 # so we have to impose a number of phobic and philic species and indicate then with position
 # where to place them. All other should be filled with missing or nan.
 
-
-ifs_cycle  = "48R1"
-netcdfname = "outputnc/store_ifsnc/ifs_CY48R1.nc"
+ifs_cycle  = "49R1"
+netcdfname = "outputnc/store_ifsnc/ifs_CY49R1.nc"
 
 number     = { philic=13, phobic=18}
 
@@ -204,6 +203,6 @@ description_hydrophilic.11 = " 11: Fine mode Ammonium sulfate (for ammonia), GAC
 description_hydrophilic.12 = " 12: Fine mode Nitrate, GLOMAP  "
 description_hydrophilic.13 = " 13: Coarse mode Nitrate, GLOMAP"
 
-contact      = 'ramiro.checa-garcia@ecmwf.int'
-institution  = 'ECMWF'
+contact      = 'Ramiro Checa-Garcia: ramiro.checa-garcia at ecmwf.int'
+institution  = 'European Centre for Medium-Range Weather Forecasts (ECMWF)'
 experiment   = 'using the sofware tool: ecaeropt'
