--- a/settings/IFS_CY49R1_withRemy.toml
+++ b/settings/IFS_CY49R1_withRemy.toml
@@ -27,7 +27,7 @@
 # specific information in the config files or in the process section
 
 [default]
-wavelengths = "data/wavelengths/wl_out_IFS.txt"     # indicates the default wavelengths for output files this
+wavelengths = "data/wavelengths/wl_out_TEST_2.txt"   # indicates the default wavelengths for output files this
                                                     # will override the value in the configuration files!!
                                                     # if you want to keep conf. files value remove this.
 
@@ -100,12 +100,12 @@ skip=false
 
 # For processing single aerosols you can add them here (we are adding the names in species section)
 single = [ "ss", 
-           "du1", "du2", "du3", 
+           "du1", "du2", "du3", "du4", 
            "bc1", "bc2", "bc3",
-           "su", 
+           "su", "su1", "su2",
            "ni_fine", "ni_coarse",
            "NH3_fine", 
-           "SOA1", "SOA2"     ]                              # This will process these single species
+           "SOA1", "SOA2", "om"      ]                       # This will process these single species
                                                              # with default settings AT SPECIES
 
 # For mixing config files the syntax is more complex. First the elements are defined in [species] as usual config files but
@@ -125,36 +125,39 @@ mixing.organic.ncname = ["organic", "optics_IFS", "C:today"]  # here we have to 
 # where to place them. All other should be filled with missing or nan.
 
 ifs_cycle  = "49R1"
-netcdfname = "outputnc/store_ifsnc/ifs_CY49R1.nc"
-nc_ref     = "tests/references/ifs_nc/aerosol_ifs_49R1.nc"
+netcdfname = "outputnc/store_ifsnc/ifs_CY49R1_withRemiUpdates.nc"
 
-number     = { philic=10, phobic=14}
+number     = { philic=13, phobic=18}
 
 rhphobic   = 3 # In some case the phobic is taken from philic at specific RH between 20 and 30%
 
 aer.dd1     = { species="du1"       , type="phobic", position= 1 , bin=3 }
-aer.dd2     = { species="du3"       , type="phobic", position= 4 , bin=3 }
-aer.dd3     = { species="du2"       , type="phobic", position= 7 , bin=3 }
-aer.org_dry = { species="organic"   , type="phobic", position= 10, bin=1 }
-aer.bc1     = { species="bc1"       , type="phobic", position= 11, bin=1 }
-aer.bc3     = { species="bc3"       , type="phobic", position= 12, bin=1 }
-aer.bc2     = { species="bc2"       , type="phobic", position= 13, bin=1 }
-aer.su_dry  = { species="su"        , type="phobic", position= 14, bin=1 }
+aer.dd2     = { species="du2"       , type="phobic", position= 4 , bin=3 }
+aer.dd3     = { species="du3"       , type="phobic", position= 7 , bin=3 }
+aer.dd4     = { species="du4"       , type="phobic", position= 10, bin=3 }
+aer.org_dry = { species="organic"   , type="phobic", position= 13, bin=1 }
+aer.om_dry  = { species="om"        , type="phobic", position= 14, bin=1 }
+aer.bc1     = { species="bc1"       , type="phobic", position= 15, bin=1 }
+aer.bc2     = { species="bc2"       , type="phobic", position= 16, bin=1 }
+aer.bc3     = { species="bc3"       , type="phobic", position= 17, bin=1 }
+aer.su_dry  = { species="su"        , type="phobic", position= 18, bin=1 }
 
 aer.ss      = { species="ss"        , type="philic", position= 1 , bin=3 }
 aer.org     = { species="organic"   , type="philic", position= 4 , bin=1 }
-aer.su      = { species="su"        , type="philic", position= 5 , bin=1 }
-aer.soab    = { species="SOA1"      , type="philic", position= 6 , bin=1 }
-aer.soaa    = { species="SOA2"      , type="philic", position= 7 , bin=1 }
-aer.ammf    = { species="NH3_fine"  , type="philic", position= 8 , bin=1 }
-aer.nif     = { species="ni_fine"   , type="philic", position= 9 , bin=1 }
-aer.nic     = { species="ni_coarse" , type="philic", position= 10, bin=1 }
-
+aer.om      = { species="om"        , type="philic", position= 5 , bin=1 }
+aer.su      = { species="su"        , type="philic", position= 6 , bin=1 }
+aer.su1     = { species="su1"       , type="philic", position= 7,  bin=1 }
+aer.su2     = { species="su2"       , type="philic", position= 8,  bin=1 }
+aer.soab    = { species="SOA1"      , type="philic", position= 9 , bin=1 }
+aer.soaa    = { species="SOA2"      , type="philic", position= 10, bin=1 }
+aer.ammf    = { species="NH3_fine"  , type="philic", position= 11, bin=1 }
+aer.nif     = { species="ni_fine"   , type="philic", position= 12, bin=1 }
+aer.nic     = { species="ni_coarse" , type="philic", position= 13, bin=1 }
 
 
 
 [info]
-product_version = '49R1'
+product_version = '48R1'
 comment_string = """
 This file provides aerosol scattering properties versus wavenumber for the aerosol \
 species defined by Bozzo et al. (GMD 2020), for use in the ECMWF Integrated Forecasting \
@@ -176,22 +179,29 @@ description_hydrophobic.6  = " 6: Desert dust, bin 3, 0.90-20.0 micron, Fouquart
 description_hydrophobic.7  = " 7: Desert dust, bin 1, 0.03-0.55 micron, Woodward 2001, Table 2  "
 description_hydrophobic.8  = " 8: Desert dust, bin 2, 0.55-0.90 micron, Woodward 2001, Table 2  "
 description_hydrophobic.9  = " 9: Desert dust, bin 3, 0.90-20.0 micron, Woodward 2001, Table 2  " 
-description_hydrophobic.10 = " 10: Hydrophobic organic matter, OPAC (hydrophilic at RH=20%%)  "
-description_hydrophobic.11 = " 11: Black carbon, OPAC  "
-description_hydrophobic.12 = " 12: Black carbon, Bond and Bergstrom 2006  "
-description_hydrophobic.13 = " 13: Black carbon, Stier et al 2007  "
-description_hydrophobic.14 = " 14: Stratospheric sulfate (hydrophilic ammonium sulfate at RH 20%%-30%%)"
+description_hydrophobic.10 = " 10: Desert dust, bin 1, 0.03-0.55 micron, Composite  "
+description_hydrophobic.11 = " 11: Desert dust, bin 2, 0.55-0.90 micron, Composite  "
+description_hydrophobic.12 = " 12: Desert dust, bin 3, 0.90-20.0 micron, Composite  "
+description_hydrophobic.13 = " 13: Hydrophobic organic matter, OPAC (hydrophilic at RH=20%%)  "
+description_hydrophobic.14 = " 14: Hydrophobic organic matter, Brown et al 2018 (hydrophilic at RH=20%)  "
+description_hydrophobic.15 = " 15: Black carbon, OPAC  "
+description_hydrophobic.16 = " 16: Black carbon, Bond and Bergstrom 2006  "
+description_hydrophobic.17 = " 17: Black carbon, Stier et al 2007  "
+description_hydrophobic.18 = " 18: Stratospheric sulfate (hydrophilic ammonium sulfate at RH 20%%-30%%)"
 
 description_hydrophilic.1  = " 1: Sea salt, bin 1, 0.03-0.5 micron, OPAC "
 description_hydrophilic.2  = " 2: Sea salt, bin 2, 0.50-5.0 micron, OPAC "
 description_hydrophilic.3  = " 3: Sea salt, bin 3, 5.0-20.0 micron, OPAC "
 description_hydrophilic.4  = " 4: Hydrophilic organic matter, OPAC "
-description_hydrophilic.5  = " 5: Ammonium sulfate (for sulfate), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
-description_hydrophilic.6  = " 6: Secondary organic aerosol - biogenic, Moise et al 2015  "
-description_hydrophilic.7  = " 7: Secondary organic aerosol - anthropogenic, Moise et al 2015  "
-description_hydrophilic.8  = " 8: Fine mode Ammonium sulfate (for ammonia), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
-description_hydrophilic.9  = " 9: Fine mode Nitrate, GLOMAP  "
-description_hydrophilic.10 = " 10: Coarse mode Nitrate, GLOMAP"
+description_hydrophilic.5  = " 5: Hydrophilic organic matter, Brown et al 2018 "
+description_hydrophilic.6  = " 6: Ammonium sulfate (for sulfate), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
+description_hydrophilic.7  = " 7: Sulfate, GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
+description_hydrophilic.8  = " 8: Sulfate, GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/ with modified size distribution  "
+description_hydrophilic.9  = " 9: Secondary organic aerosol - biogenic, Moise et al 2015  "
+description_hydrophilic.10 = " 10: Secondary organic aerosol - anthropogenic, Moise et al 2015  "
+description_hydrophilic.11 = " 11: Fine mode Ammonium sulfate (for ammonia), GACP Lacis et al https://gacp.giss.nasa.gov/data_sets/  "
+description_hydrophilic.12 = " 12: Fine mode Nitrate, GLOMAP  "
+description_hydrophilic.13 = " 13: Coarse mode Nitrate, GLOMAP"
 
 contact      = 'Ramiro Checa-Garcia: ramiro.checa-garcia at ecmwf.int'
 institution  = 'European Centre for Medium-Range Weather Forecasts (ECMWF)'
