--- a/tests/config_toml_tests/config_du1.toml
+++ b/tests/config_toml_tests/config_du1.toml
@@ -30,6 +30,7 @@ wl_out_file = "data/wavelengths/wl_out_TEST_2.txt"
 ext_scaling = 1.0
 
 [tags]
+opt_model   = "Dubovik2002"
 aer_type    = "dust_Dubovik"
 ifs         = "CY48R1"
 revised     = 2022-10-27
