--- a/tests/config_toml_tests/config_organic_waso.toml
+++ b/tests/config_toml_tests/config_organic_waso.toml
@@ -29,6 +29,7 @@ wl_out_file = "data/wavelengths/wl_out_TEST_2.txt"
 ext_scaling = 1.0
 
 [tags]
+opt_model= "OPAC"
 aer_type = "organic_mix"
 ifs      = "CY48R1"
 revised  = 2022-10-27
